--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -51,6 +51,12 @@
   <h2 class="text-center mb-4">🌱 EcoPackAI – Business Intelligence Dashboard</h2>
      <a href="{{ url_for('index') }}" class="btn btn-secondary">
   </a>
+  <div class="text-center mb-4">
+    <a href="{{ url_for('index') }}" class="btn btn-secondary btn-lg px-5 py-3">
+        ⬅ Back to MyApp
+    </a>
+</div>
+
   <br><br>
   <!-- METRICS -->
   <div class="row">
@@ -189,4 +195,5 @@ loadData();
 
 </body>
 </html>
+
 
