--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,12 +49,11 @@
 <div class="container mt-4">
 
   <h2 class="text-center mb-4">🌱 EcoPackAI – Business Intelligence Dashboard</h2>
-     <a href="{{ url_for('index') }}" class="btn btn-secondary">
-  </a>
   <div class="text-center mb-4">
     <a href="{{ url_for('index') }}" class="btn btn-secondary btn-lg px-5 py-3">
         ⬅ Back to MyApp
     </a>
+  </div>
 </div>
 
   <br><br>
@@ -195,5 +194,6 @@ loadData();
 
 </body>
 </html>
+
 
 
